<resources>
    <string name="app_name">Money Invest</string>

    <string name="title_activity_opening">OpeningActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pergunta_saldo">Selecione como você quer recarregar o seu saldo:</string>
    <string name="saldo_disponivel">Saldo Disponível:</string>
    <string name="cartao_credito">Cartão de Crédito</string>
    <string name="recarregar">Recarregar</string>
    <string name="transferencia_bancaria">Transferência Bancária</string>
    <string name="voltar">Voltar</string>
    <string name="boleto_bancario">Boleto Bancário</string>
    <string name="nome">Nome</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_email">Digite o seu e-mail</string>
    <string name="cpf">CPF</string>
    <string name="digite_cpf">Digite o seu CPF (apenas números)</string>
    <string name="senha">Senha</string>
    <string name="digite_senha">Digite a sua senha...</string>
    <string name="digite_mensagem">Digite a sua mensagem aqui</string>
    <string name="pergunta_esqueci">Digite o seu e-mail abaixo para mudar a sua senha:</string>
    <string name="enviar">Enviar</string>
    <string name="meus_investimentos">Meus Investimentos</string>
    <string name="resgatar_investimentos">Resgatar Investimentos</string>
    <string name="acrescentar_saldo">Acrescentar Saldo</string>
    <string name="investir_saldo">Investir Saldo</string>
    <string name="falar_assitente">Falar com o Assitente</string>
    <string name="veja_investimentos">Veja seus investimentos abaixo:</string>
    <string name="selecione_investimento">Selecione o investimento desejado abaixo:</string>
    <string name="entrar">Entrar</string>
    <string name="quero_cadastrar">Quero me cadastrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="resgatar">Resgatar</string>
    <string name="saldo_indisponivel">Saldo Indisponível</string>
    <string name="salvar_alteracoes">Salvar Alterações</string>
    <string name="sair_salvar">Sair e Salvar</string>
    <string name="cdb">CDB:</string>
    <string name="tesouro_direto">Tesouro Direto:</string>
    <string name="poupanca">Poupança:</string>

    <string name="username">76f4f1e4-aa82-4216-b25a-a7bd4e3c8140</string>
    <string name="password">4w3C4PbBK21Z</string>
    <string name="workspace">61a13a6f-08c1-4915-843d-3aa619b75795</string>
    <string name="investir">Investir</string>
</resources>
