<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.a3sir.protechsolutions.am_prototype.EsqueciActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pergunta_esqueci"
        android:gravity="center"
        android:textSize="24sp"
        android:paddingBottom="100dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_email"
        android:id="@+id/edtEmailEsqueci"
        android:onClick="esqueciSenha"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/btnEnviarEsqueci"
        android:layout_marginTop="100dp"
        android:onClick="resetarSenha"/>

</android.widget.LinearLayout>
