<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.a3sir.protechsolutions.am_prototype.SaldoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pergunta_saldo"
            android:textSize="24sp"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_disponivel"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ XXXX,XX"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="1">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cartao_credito"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:id="@+id/btnCartaoSaldo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="1">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transferencia_bancaria"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:id="@+id/btnTransferenciaSaldo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="1">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/boleto_bancario"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:id="@+id/btnBoletoSaldo"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:onClick="voltar"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/btnVoltarSaldo"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>
</android.widget.ScrollView>
