<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.a3sir.protechsolutions.am_prototype.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/imgLogoMain"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical" />
    </LinearLayout>


    <EditText
        android:id="@+id/edtEmailMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:hint="@string/digite_email"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <EditText
        android:id="@+id/edtSenhaMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/digite_senha"
        android:inputType="textPassword"
        android:gravity="center"
        android:paddingTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:id="@+id/btnEntrarMain"
            android:onClick="login"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quero_cadastrar"
            android:onClick="novoCadastro"
            android:id="@+id/btnNovoMain"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/esqueci_senha"
        android:id="@+id/txtEsqueciMain"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="esqueciSenha"/>


</android.widget.LinearLayout>
